# SignalPathwaySimulator

./: LICENSE  README.md  main.py  pyproject.toml  setup.py
docs/: component spec.md  functional spec.md
examples/: example_model.json  simple_test_model.xml
signalpathwaysimulator/: __init__.py  cli.py  data_manager.py  simulator.py  visualization_manager.py
tests/: test.py
